<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="include_team.speechrecon1516.infoActivity"
    android:weightSum="100">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbarInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/info_activity"
        app:titleMarginStart="16dp"
        android:background="?attr/colorPrimary"
        />

    <View
        android:id="@+id/toolbar_shadow_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_shadow"
        android:background="@drawable/shadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textColor="@color/subtitle"
            android:textSize="40sp"
            android:textStyle="italic"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:orientation="vertical"
        android:layout_marginStart="5pt" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kaldi_title"
            android:textStyle="bold"
            android:textSize="10pt"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kaldi_text"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esp_title"
            android:textStyle="bold"
            android:textSize="10pt"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esp_text"

            />

    </LinearLayout>


</LinearLayout>
